--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
             "Tweakwise\\AttributeLanding\\": "src"
         }
     },
+    "replace": {
+        "emico/m2-attributelanding": "3.1.0"
+    },
     "repositories": [
         {
             "type": "composer",
